--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.11
+  syncfusion_flutter_calendar: ^19.4.41
+  table_calendar: ^3.0.3
+  intl: ^0.17.0
+  simple_gesture_detector: ^0.2.0
+  flutter_svg: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +67,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+      - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
