--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Icons
+  flutter_feather_icons: ^2.0.0+1
+
+  # Base Dependencies
+  google_fonts: ^2.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -70,6 +76,7 @@ flutter:
 
   assets:
       - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
