--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
   # Icons
   flutter_feather_icons: ^2.0.0+1
 
   # Base Dependencies
   google_fonts: ^2.0.0
-
+  flutter_swipe_button: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,10 +49,15 @@ dependencies:
   intl: ^0.17.0
   simple_gesture_detector: ^0.2.0
   flutter_svg: ^1.0.0
+  toggle_switch: ^1.3.0
+  swipebuttonflutter:
+  stop_watch_timer:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
